# med-transcribe-all

./: .gitignore  Cargo.toml  README.md  dioxus.toml  package-lock.json  package.json  server.js  start.sh
.cursor/rules/: pocketflow.mdc  scan-project.mdc
.documentation/: medtranscribeall-product-requirements.md  potential-features.md
assets/: index.html
backend/: .gitignore  README.md  flow.py  main.py  nodes.py  requirements.txt
backend/docs/: design.md
backend/src/: main.py
backend/utils/: websocket_manager.py
frontend/: package.json  server.js
frontend/public/: index.html
frontend/src/assets/: index.html
public/: index.html
src/: main.rs
src/assets/js/: speech-recognition.js
