[package]
name = "speak-notes"
version = "0.1.0"
edition = "2021"
description = "A speech recognition application with Dioxus and JavaScript"
authors = ["Bruno"]

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = { version = "0.4.0", features = ["transparent"] }
dioxus-web = "0.4.0"
dioxus-router = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
wry = "0.28"
tao = "0.20"
